# fix_my_csv

./: .gitattributes  .gitignore  Cargo.toml  PSEUDOPLAN.md  README.md  Taskfile.yml  clean_test_csvs.exs  csv_profile_report.parquet  log.logs  main.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
auto/: git.py  git.py.scratch
cli/: __init__.py  __main__.py  cli.py  config.yaml
core/: CHANGELOG.md  core-csv.cabal
csv_fixer/: Cargo.toml
csv_fixer/src/: main.rs
dir_manager/: Cargo.toml
execute/: Cargo.toml
execute/nif_actions/: Cargo.toml  add.sh
execute/run/: Cargo.toml
orchestrate/: .gitignore  README.md  clean_test_csvs.exs  mix.exs
orchestrate/lib/: backup.ex  orchestrate.ex
orchestrate/test/: orchestrate_test.exs
sample_data/search/: s10_Search_Report_06-24-2025.csv  s11_Search_Report_06-24-2025.csv  s12_Search_Report_06-24-2025.csv  s13_Search_Report_06-24-2025.csv  s14_Search_Report_06-24-2025.csv  s15_Search_Report_06-24-2025.csv  s16_Search_Report_06-24-2025.csv  s17_Search_Report_06-24-2025.csv  s18_Search_Report_06-24-2025.csv  s2_Search_Report_06-24-2025.csv  s3_Search_Report_06-24-2025.csv  s4_Search_Report_06-24-2025.csv  s6_Search_Report_06-24-2025.csv  s7_Search_Report_06-24-2025.csv  s9_Search_Report_06-24-2025.csv
sample_data/training/: s10_CVH_Report_06-25-2025.csv  s11_CVH_Report_06-25-2025.csv  s12_CVH_Report_06-25-2025.csv  s13_CVH_Report_06-25-2025.csv  s14_CVH_Report_06-25-2025.csv  s15_CVH_Report_06-25-2025.csv  s16_CVH_Report_06-25-2025.csv  s17_CVH_Report_06-25-2025.csv  s18_CVH_Report_06-25-2025.csv  s1_CVH_Report_06-25-2025.csv  s1_CVH_Report_3rd_year_06-25-2025.csv  s2_CVH_Report_06-25-2025.csv  s3_CVH_Report_06-25-2025.csv  s4_CVH_Report_06-25-2025.csv  s6_CVH_Report_06-25-2025.csv  s7_CVH_Report_06-25-2025.csv  s9_CVH_Report_06-25-2025.csv
sample_data/users/: s10_RegisteredUsers_Report_06-24-2025.csv  s11_RegisteredUsers_Report_06-24-2025.csv  s12_RegisteredUsers_Report_06-24-2025.csv  s13_RegisteredUsers_Report_06-24-2025.csv  s14_RegisteredUsers_Report_06-24-2025.csv  s15_RegisteredUsers_Report_06-24-2025.csv  s16_RegisteredUsers_Report_06-24-2025.csv  (+9 more)
scripts/: interface.py  menu.py
src/: interface.py  menu.py
test_csvs/: s1_Search_Report_06-24-2025.csv  s1_Search_Report_06-24-2025_cleaned.csv
(+10 files in other folders)
