[project]
name = "fix-my-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "cfgv==3.5.0",
    "chardet==5.2.0",
    "click==8.3.1",
    "distlib==0.4.0",
    "filelock==3.20.0",
    "h5py==3.15.1",
    "identify==2.6.15",
    "iniconfig==2.3.0",
    "inquirerpy==0.3.4",
    "librt==0.7.3",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "mypy==1.19.0",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pfzy==0.3.4",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "pre-commit==4.5.0",
    "prompt-toolkit==3.0.52",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "ruff==0.14.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "tdqm==0.0.1",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "virtualenv==20.35.4",
    "wcwidth==0.2.14",
]
